# Reflection

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Examples/AsteroidGame/: CMakeLists.txt
Examples/AsteroidGame/Source/: ImGuiIntegration.cpp  ImGuiIntegration.hpp  Main.cpp
Examples/SimpleGUI/: CMakeLists.txt
Examples/SimpleGUI/Source/: Main.cpp
Include/: RClass.hpp  RCore.hpp  RObject.hpp  RProperty.hpp  Reflection.hpp
